# bad-ass-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: demo_doc.md  demo_sequence.py  record.sh  record_demo.py
src/bad_ass_mcp/: server.py  types.py
src/bad_ass_mcp/backend/: base.py  linux.py  macos.py  windows.py
tests/: fake_backend.py  test_backend_contract.py  test_linux_internals.py  test_macos_internals.py  test_prune_tree.py  test_serialise_tree.py  test_windows_internals.py
