[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bad-ass-mcp"
dynamic = ["version"]
description = "Cross-platform desktop GUI automation MCP — accessibility tree first, vision as last resort"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-Cocoa>=9.0", "pyobjc-framework-ApplicationServices>=9.0", "pyobjc-framework-Quartz>=9.0"]
windows = ["comtypes>=1.4"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.9"]

[project.scripts]
bad-ass-mcp = "bad_ass_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
